# openauto

./: .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md  cmu_interfaces.xml  sdbus-c++-xml2cpp  split_dbus_interfaces.py
.github/workflows/: clang-tidy.yml  development.yml  main.yml  master.yml
cmake/: arm-mazda-linux-musleabi.toolchain  arm-unknown-linux-musleabi.toolchain  version.in.h
cmake_modules/: Findlibusb-1.0.cmake
include/Mazda/Dbus/XML/: com.NNG.Api.Client.xml  com.jci.BLM_TIME.xml  com.jci.CD.xml  com.jci.RM_Ipc_Cons.Interface.xml  com.jci.RM_Ipc_Prov.Interface.xml  com.jci.UPDATEA_Sys_Ipc.Interface.xml  com.jci.UPDATES_Sys_Ipc.Interface.xml  com.jci.VIDEOCTRL.xml  com.jci.aapa.xml  com.jci.audioPlayer.xml  com.jci.audiosettings.xml  com.jci.auxin.xml  com.jci.bca.xml  com.jci.bds.xml  (+82 more)
include/autoapp/: App.hpp
include/autoapp/Configuration/: Configuration.hpp  HandednessOfTrafficType.hpp  IConfiguration.hpp  IRecentAddressesList.hpp
include/autoapp/Managers/: AAPA.hpp  AudioManager.hpp  BluetoothManager.hpp  GPSManager.hpp  HttpManager.hpp  NavigationManager.hpp  VideoManager.hpp
include/autoapp/Projection/: AlsaAudio.hpp  AlsaAudioInput.hpp  GSTVideoOutput.hpp  IAudioInput.hpp  IAudioOutput.hpp  IBluetoothDevice.hpp  IInputDevice.hpp  IInputDeviceEventHandler.hpp  IVideoOutput.hpp  InputDevice.hpp  InputEvent.hpp  MazdaBluetooth.hpp
include/autoapp/Service/: AndroidAutoEntity.hpp  AndroidAutoEntityFactory.hpp  AudioFocus.hpp  AudioInputService.hpp  AudioService.hpp  BluetoothService.hpp  IAndroidAutoEntity.hpp  IAndroidAutoEntityEventHandler.hpp  IAndroidAutoEntityFactory.hpp  IPinger.hpp  IService.hpp  IServiceFactory.hpp  InputService.hpp  MediaAudioService.hpp  NavigationService.hpp  Pinger.hpp  SensorService.hpp  ServiceFactory.hpp  SpeechAudioService.hpp  SystemAudioService.hpp  VideoService.hpp  WifiService.hpp
include/autoapp/Signals/: AASignals.hpp  AudioSignals.hpp  GpsSignals.hpp  NavigationSignals.hpp  Signals.hpp  VideoSignals.hpp
include/installer/: main.hpp
installer/: tweaks.sh
src/Mazda/Dbus/com.jci.RM_Ipc_Prov.Interface/: CMakeLists.txt  com_jci_RM_Ipc_Prov_InterfaceProxy.cpp  com_jci_RM_Ipc_Prov_Interface_objectProxy.cpp
src/Mazda/Dbus/com.jci.UPDATEA_Sys_Ipc.Interface/: CMakeLists.txt  com_jci_UPDATEA_Sys_Ipc_InterfaceProxy.cpp  com_jci_UPDATEA_Sys_Ipc_Interface_objectProxy.cpp
src/Mazda/Dbus/com.jci.UPDATES_Sys_Ipc.Interface/: CMakeLists.txt  com_jci_UPDATES_Sys_Ipc_InterfaceProxy.cpp  com_jci_UPDATES_Sys_Ipc_Interface_objectProxy.cpp
src/Mazda/Dbus/com.jci.blm.msg.Interface/: CMakeLists.txt  com_jci_blm_msg_InterfaceProxy.cpp  com_jci_blm_msg_Interface_objectProxy.cpp
src/Mazda/Dbus/com.jci.blmsystem.Interface/: CMakeLists.txt  com_jci_blmsystem_InterfaceProxy.cpp  com_jci_blmsystem_Interface_objectProxy.cpp
src/Mazda/Dbus/com.jci.cpp.dbus.DbusConnection/: CMakeLists.txt  com_jci_cpp_dbus_DbusConnectionProxy.cpp  com_jci_cpp_dbus_DbusConnection_objectProxy.cpp
src/Mazda/Dbus/com.jci.cpp.devices.Display/: CMakeLists.txt  com_jci_cpp_devices_DisplayProxy.cpp  com_jci_cpp_devices_Display_objectProxy.cpp
src/Mazda/Dbus/com.jci.cpp.devices.Gpio/: CMakeLists.txt  com_jci_cpp_devices_GpioProxy.cpp  com_jci_cpp_devices_Gpio_objectProxy.cpp
src/Mazda/Dbus/com.jci.cpp.devices.Keyboard/: CMakeLists.txt  com_jci_cpp_devices_KeyboardProxy.cpp  com_jci_cpp_devices_Keyboard_objectProxy.cpp
src/Mazda/Dbus/com.jci.cpp.devices.Mouse/: CMakeLists.txt  com_jci_cpp_devices_MouseProxy.cpp  com_jci_cpp_devices_Mouse_objectProxy.cpp
src/Mazda/Dbus/com.jci.cpp.power.Interface/: CMakeLists.txt  com_jci_cpp_power_InterfaceProxy.cpp  com_jci_cpp_power_Interface_objectProxy.cpp
src/Mazda/Dbus/com.jci.cpp.service.Service/: CMakeLists.txt  com_jci_cpp_service_ServiceProxy.cpp  com_jci_cpp_service_Service_objectProxy.cpp
src/Mazda/Dbus/com.jci.cpp.settings.Registry/: CMakeLists.txt  com_jci_cpp_settings_RegistryProxy.cpp  com_jci_cpp_settings_Registry_objectProxy.cpp
src/Mazda/Dbus/com.jci.cpp.vbi.Amplifier/: CMakeLists.txt  com_jci_cpp_vbi_AmplifierProxy.cpp  com_jci_cpp_vbi_Amplifier_objectProxy.cpp
src/Mazda/Dbus/com.jci.navi2IHU.HUDSettings/: CMakeLists.txt  com_jci_navi2IHU_HUDSettings.cpp  com_jci_navi2IHU_HUDSettingsInterface.cpp  com_jci_navi2IHU_HUDSettingsProxy.cpp  com_jci_navi2IHU_HUDSettings_objectAdapter.cpp  com_jci_navi2IHU_HUDSettings_objectProxy.cpp
src/Mazda/Dbus/com.jci.navi2IHU.NaviFavorites/: CMakeLists.txt  com_jci_navi2IHU_NaviFavoritesProxy.cpp  com_jci_navi2IHU_NaviFavorites_objectProxy.cpp
src/Mazda/Dbus/com.jci.obs.stitcher.hmi/: CMakeLists.txt  com_jci_obs_stitcher_hmiProxy.cpp  com_jci_obs_stitcher_hmi_objectProxy.cpp
src/Mazda/Dbus/com.jci.obs.stitcher.svc/: CMakeLists.txt  com_jci_obs_stitcher_svcProxy.cpp  com_jci_obs_stitcher_svc_objectProxy.cpp
src/Mazda/Dbus/com.jci.opera_IHU_PRIMARY/: CMakeLists.txt  com_jci_opera_IHU_PRIMARYProxy.cpp  com_jci_opera_IHU_PRIMARY_objectProxy.cpp
src/Mazda/Dbus/com.xsembedded.ServiceProvider/: CMakeLists.txt  com_xsembedded_ServiceProvider.cpp  com_xsembedded_ServiceProviderInterface.cpp  com_xsembedded_ServiceProviderProxy.cpp  com_xsembedded_ServiceProvider_objectAdapter.cpp  com_xsembedded_ServiceProvider_objectProxy.cpp
src/autoapp/: App.cpp  autoapp.cpp
src/autoapp/Configuration/: Configuration.cpp
src/autoapp/Managers/: AAPA.cpp  AudioManager.cpp  BluetoothManager.cpp  GPSManager.cpp  HttpManager.cpp  NavigationManager.cpp  VideoManager.cpp
src/autoapp/Projection/: AlsaAudio.cpp  AlsaAudioInput.cpp  GSTVideoOutput.cpp  InputDevice.cpp  MazdaBluetooth.cpp  VideoOutput.cpp
src/autoapp/Service/: AndroidAutoEntity.cpp  AndroidAutoEntityFactory.cpp  AudioFocus.cpp  AudioInputService.cpp  AudioService.cpp  BluetoothService.cpp  InputService.cpp  MediaAudioService.cpp  NavigationService.cpp  Pinger.cpp  SensorService.cpp  ServiceFactory.cpp  SpeechAudioService.cpp  SystemAudioService.cpp  VideoService.cpp  WifiService.cpp
src/autoapp/UI/: mainwindow.ui
src/btservice/: btservice.cpp  btservice.hpp
src/installer/: main.cpp
(+516 files in other folders)
