cmake_minimum_required(VERSION 3.5.1)
project(com.jci.RM_Ipc_Prov.Interface LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.jci.RM_Ipc_Prov.Interface STATIC ${source_files})
target_include_directories(com.jci.RM_Ipc_Prov.Interface PUBLIC ../../../../include/Mazda/Dbus/com.jci.RM_Ipc_Prov.Interface/)
