cmake_minimum_required(VERSION 3.5.1)
project(com.jci.UPDATEA_Sys_Ipc.Interface LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.jci.UPDATEA_Sys_Ipc.Interface STATIC ${source_files})
target_include_directories(com.jci.UPDATEA_Sys_Ipc.Interface PUBLIC ../../../../include/Mazda/Dbus/com.jci.UPDATEA_Sys_Ipc.Interface/)
