cmake_minimum_required(VERSION 3.5.1)
project(com.jci.blm.msg.Interface LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.jci.blm.msg.Interface STATIC ${source_files})
target_include_directories(com.jci.blm.msg.Interface PUBLIC ../../../../include/Mazda/Dbus/com.jci.blm.msg.Interface/)
