cmake_minimum_required(VERSION 3.5.1)
project(com.jci.cpp.dbus.DbusConnection LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.jci.cpp.dbus.DbusConnection STATIC ${source_files})
target_include_directories(com.jci.cpp.dbus.DbusConnection PUBLIC ../../../../include/Mazda/Dbus/com.jci.cpp.dbus.DbusConnection/)
