cmake_minimum_required(VERSION 3.5.1)
project(com.jci.cpp.devices.Keyboard LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.jci.cpp.devices.Keyboard STATIC ${source_files})
target_include_directories(com.jci.cpp.devices.Keyboard PUBLIC ../../../../include/Mazda/Dbus/com.jci.cpp.devices.Keyboard/)
