cmake_minimum_required(VERSION 3.5.1)
project(com.jci.cpp.settings.Registry LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.jci.cpp.settings.Registry STATIC ${source_files})
target_include_directories(com.jci.cpp.settings.Registry PUBLIC ../../../../include/Mazda/Dbus/com.jci.cpp.settings.Registry/)
