cmake_minimum_required(VERSION 3.5.1)
project(com.jci.navi2IHU.HUDSettings LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.jci.navi2IHU.HUDSettings STATIC ${source_files})
target_include_directories(com.jci.navi2IHU.HUDSettings PUBLIC ../../../../include/Mazda/Dbus/com.jci.navi2IHU.HUDSettings/)
