cmake_minimum_required(VERSION 3.5.1)
project(com.jci.navi2IHU.NaviFavorites LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.jci.navi2IHU.NaviFavorites STATIC ${source_files})
target_include_directories(com.jci.navi2IHU.NaviFavorites PUBLIC ../../../../include/Mazda/Dbus/com.jci.navi2IHU.NaviFavorites/)
