cmake_minimum_required(VERSION 3.5.1)
project(com.jci.obs.stitcher.hmi LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.jci.obs.stitcher.hmi STATIC ${source_files})
target_include_directories(com.jci.obs.stitcher.hmi PUBLIC ../../../../include/Mazda/Dbus/com.jci.obs.stitcher.hmi/)
