cmake_minimum_required(VERSION 3.5.1)
project(com.jci.opera_IHU_PRIMARY LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.jci.opera_IHU_PRIMARY STATIC ${source_files})
target_include_directories(com.jci.opera_IHU_PRIMARY PUBLIC ../../../../include/Mazda/Dbus/com.jci.opera_IHU_PRIMARY/)
