cmake_minimum_required(VERSION 3.5.1)
project(com.xsembedded.ServiceProvider LANGUAGES CXX)
file(GLOB_RECURSE source_files *.cpp)
add_library(com.xsembedded.ServiceProvider STATIC ${source_files})
target_include_directories(com.xsembedded.ServiceProvider PUBLIC ../../../../include/Mazda/Dbus/com.xsembedded.ServiceProvider/)
